--- a/film.html
+++ b/film.html
@@ -18,6 +18,7 @@
 			rel="stylesheet"
 		/>
 		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
+		<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 		<link rel="stylesheet" href="styly.css" />
 		<script src="spolecne.js" type="module"></script>
 		<script src="film.js" type="module"></script>
